# stupidyGLFrame

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/include/: camera.h  mesh.h  model.h  shader.h
